Truncated the wallet address opon resizing. Fixed copy button alignment.

--- a/frontend/src/assets/sass/paper/_cards.scss
+++ b/frontend/src/assets/sass/paper/_cards.scss
@@ -83,6 +83,7 @@
   }
   .stats {
     color: #a9a9a9;
+    flex-wrap: nowrap;
     font-weight: 300;
     i {
       margin-right: 0.125em;
